--- a/loja.html
+++ b/loja.html
@@ -213,5 +213,12 @@
 
         <script src="js/main.js"></script>
 
+        <a id="iconeFixo" href="caminho/do/arquivo.html">
+          <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+        </a>
+
+
+
+
     </body>
 </html>
