--- a/loja.html
+++ b/loja.html
@@ -214,7 +214,7 @@
         <script src="js/main.js"></script>
 
         <a id="iconeFixo" href="caminho/do/arquivo.html">
-          <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+          <img src="redes/chatbot.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
         </a>
 
 
