--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <title> HUB </title>
+        <link rel="shortcut icon" href="img/apple-icon-152x152.png" type="image/x-icon">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Daniel">
@@ -216,6 +217,10 @@
         <script src="js/carousel.js"></script>
 
         <script src="js/main.js"></script>
+
+        <a id="iconeFixo" href="caminho/do/arquivo.html">
+          <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+        </a>
 
     </body>
 </html>
