--- a/contato.html
+++ b/contato.html
@@ -34,6 +34,7 @@
               <li><a href="automacao.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
               <li><a href="desing.html">DESING</a></li>
+              <li><a href="contato.html">CONTATO</a></li>
 
             </ul>
           </nav>
@@ -95,13 +96,13 @@ textarea{height: 150px;}
     </section>
     <hr style="border: none; height: 0.5cm; background-color: rgb(226, 25, 217)">
     <section id="redes-sociais">
-        <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/cv.png"alt="Resume"></a></abbr>
-        <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/git.png"alt="git"></a></abbr>
-        <abbr title="Linkedin"><a href="http://www.linkedin.com/in/rhaony-ferraz-5a181377/"target="tela"><img src="redes/in3.png"alt="in"></a></abbr>
-        <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
-        <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/email.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
-        <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/wts3.png"alt="WhatsApp-Bot"></a></abbr>
-     </section>
+      <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/face.png"alt="Resume"></a></abbr>
+      <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/instagram.png"alt="git"></a></abbr>
+      <abbr title="Linkedin"><a href="http://www.linkedin.com/in/rhaony-ferraz-5a181377/"target="tela"><img src="redes/linkedin.png"alt="in"></a></abbr>
+      <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
+      <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
+      <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
+   </section>
 
      <footer class="footer">
       <div class="container">
@@ -128,6 +129,10 @@ textarea{height: 150px;}
 
 </body>
 </html>
+
+<a id="iconeFixo" href="caminho/do/arquivo.html">
+  <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+</a>
 
 
 </body>
