--- a/desing.html
+++ b/desing.html
@@ -20,6 +20,8 @@
     </head>
     <body class="no-js">
 
+
+
         <header class="header">
           <a href="index.html" class="logo-text">HUB</a>
 
@@ -47,7 +49,10 @@
 
           <p class="hero__text">Temos a solução para automatizar o seu negocio.</p>
 
+           <!-- Fonts -->
           <a href="#" class="hero__btn">CONTATO</a>
+
+
       </section>
 
         <!---->
@@ -55,7 +60,7 @@
             <section class="people-cards">
             <article class="people-cards__card">
 
-             <!---- <img src="img/c01.jpg" alt="Carousel Img" class="people-cards__image"> -->
+
 
                 <div class="people-cards__avatar">
                   <!-- <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
@@ -135,7 +140,8 @@
                     <h2>Latest Articles</h2>
                 </div>
             </div>
-
+    <!--
+                <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">
           <div class="last-articles__thumbs">
               <a href="#"><img src="img/articles/01.jpg" alt=""></a>
               <a href="#"><img src="img/articles/02.jpg" alt=""></a>
@@ -143,21 +149,39 @@
               <a href="#"><img src="img/articles/04.jpg" alt=""></a>
               <a href="#"><img src="img/articles/05.jpg" alt=""></a>
               <a href="#"><img src="img/articles/06.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/07.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/08.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/09.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/10.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/11.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/12.jpg" alt=""></a>
-          </div>
+
+
+          </div>    -->
+
+
+
+
+          <fieldset>
+            <label style="--_img: url(https://images.pexels.com/photos/21294340/pexels-photo-21294340.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
+              <input type="radio" name="images" value="Fiddle Leaf">
+            </label>
+            <label style="--_img: url(https://images.pexels.com/photos/21297996/pexels-photo-21297996.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
+              <input type="radio" name="images" value="Pink Princess">
+            </label>
+            <label style="--_img: url(https://images.pexels.com/photos/21298346/pexels-photo-21298346.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
+              <input type="radio" name="images" value="Monstera" checked>
+            </label>
+            <label style="--_img: url(https://images.pexels.com/photos/531879/pexels-photo-531879.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
+              <input type="radio" name="images" value="Pothos">
+            </label>
+            <label style="--_img: url(https://images.pexels.com/photos/3694362/pexels-photo-3694362.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
+              <input type="radio" name="images" value="Rubber Tree">
+            </label>
+        </fieldset>
+
+
         </section>
 
         <div class="laptop-slider">
           <div class="slideshow">
-            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
+
+            <figure><img alt="" src="" /></figure>
+
             <span class="prev" style="display: none;"><i class="fas fa-angle-left fa-4x"></i></span>
             <span class="next" style="display: none;"><i class="fas fa-angle-right fa-4x"></i></span>
           </div>
@@ -167,7 +191,7 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>Nam kkkkkkkkkkkkkkkkkkkkkkkkk, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
               <figcaption>
                 Nam mi enim, auctor non ultricies.
               </figcaption>
@@ -217,6 +241,17 @@
         <script src="js/carousel.js"></script>
 
         <script src="js/main.js"></script>
+
+
+        <a id="iconeFixo" href="caminho/do/arquivo.html">
+          <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+        </a>
+
+
+
+
+
+        </div>
 
     </body>
 </html>
