--- a/contato1.html
+++ b/contato1.html
@@ -77,7 +77,7 @@ textarea{height: 150px;}
                 <input class="field" name="name" placeholder="Nome">
                 <input class="field" name="email" placeholder="E-mail">
                 <textarea class="field" name="message" placeholder="Digite sua mensagem aqui."></textarea>
-                <h1><input class="field btn-blue" type="submit" value="Enviar" style="background-color: rgb(38, 188, 249); color: rgb(0, 0, 0); cursor: pointer;" onmouseover="this.style.backgroundColor='rgb(226,25,217)';" onmouseout="this.style.backgroundColor='rgb(38, 188, 249)';"></h1>
+                <h1><input class="field btn-blue" type="submit" value="Enviar" style="background-color: rgb(rgb(113, 135, 159)); color: rgb(0, 0, 0); cursor: pointer;" onmouseover="this.style.backgroundColor='rgb(57, 100, 150)';" onmouseout="this.style.backgroundColor='rgb(255, 255, 255)';"></h1>
             </form>
 
          </h1>
@@ -88,8 +88,7 @@ textarea{height: 150px;}
 
 
           <hr>
-          <h1>Este formulário php-html
-          </h1>
+
 
     </div>
 
@@ -99,8 +98,9 @@ textarea{height: 150px;}
 
 
     </section>
-    <hr style="border: none; height: 0.5cm; background-color: rgb(226, 25, 217)">
+    <hr style="border: none; height: 0.3cm; background-color: #7b3773">
     <section id="redes-sociais">
+
       <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/face.png"alt="Resume"></a></abbr>
       <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/instagram.png"alt="git"></a></abbr>
       <abbr title="Linkedin"><a href="http://www.linkedin.com/in/rhaony-ferraz-5a181377/"target="tela"><img src="redes/linkedin.png"alt="in"></a></abbr>
@@ -111,20 +111,12 @@ textarea{height: 150px;}
 
      <footer class="footer">
       <div class="container">
-          <h2 class="footer__logo"></h2>
+        <p>
+        Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.</p>
 
-          <p>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. Maecenas diam est, venenatis vitae dui in, vestibulum mollis arcu. Donec eu nibh tincidunt, dapibus sem eu, aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
 
-          <p>aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
 
-        <ul class="footer__links">
-          <li><a href="#">List One</a></li>
-          <li><a href="#">Page Two</a></li>
-          <li><a href="#">Design</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Contact Me</a></li>
-        </ul>
-      </div>
+
   </footer>
 
   <script src="js/menu.js"></script>
