--- a/home1.html
+++ b/home1.html
@@ -47,10 +47,28 @@
                SOLUÇÕES DIGITAIS  <abbr title="Wordpress"></abbr>
           </h1>
 
-          <p class="hero__text">Temos a solução para automatizar o seu negocio.</p>
 
-           <!-- Fonts -->
-          <a href="#" class="hero__btn">CONTATO</a>
+        </section>
+
+
+        <div class="wrapper">
+          <section class="module parallax parallax-1">
+
+           </section>
+
+           <section class="module content">
+               <div class="container">
+
+
+               </div>
+           </section>
+
+
+
+
+
+
+
 
 
       </section>
@@ -114,15 +132,15 @@
         </section>
         </div>
 
-        <section class="content">
+        <section class="content"><hr>
+
         <div class="container">
 
 
           <article>
             <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
             <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
-            <a href="#" class="button button-primary">BUTTON</a>
-            <a href="#" class="button button-secundary">BUTTON</a>
+
           </article>
 
           <article>
@@ -141,14 +159,6 @@
                 </div>
             </div>
     <!--
-                <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">
-          <div class="last-articles__thumbs">
-              <a href="#"><img src="img/articles/01.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/02.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/03.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/04.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/05.jpg" alt=""></a>
-              <a href="#"><img src="img/articles/06.jpg" alt=""></a>
 
 
           </div>    -->
@@ -156,23 +166,7 @@
 
 
 
-          <fieldset>
-            <label style="--_img: url(https://images.pexels.com/photos/21294340/pexels-photo-21294340.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
-              <input type="radio" name="images" value="Fiddle Leaf">
-            </label>
-            <label style="--_img: url(https://images.pexels.com/photos/21297996/pexels-photo-21297996.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
-              <input type="radio" name="images" value="Pink Princess">
-            </label>
-            <label style="--_img: url(https://images.pexels.com/photos/21298346/pexels-photo-21298346.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
-              <input type="radio" name="images" value="Monstera" checked>
-            </label>
-            <label style="--_img: url(https://images.pexels.com/photos/531879/pexels-photo-531879.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
-              <input type="radio" name="images" value="Pothos">
-            </label>
-            <label style="--_img: url(https://images.pexels.com/photos/3694362/pexels-photo-3694362.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)">
-              <input type="radio" name="images" value="Rubber Tree">
-            </label>
-        </fieldset>
+
 
 
         </section>
@@ -223,18 +217,8 @@
             <div class="container">
                 <h2 class="footer__logo"></h2>
 
-                <p>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. Maecenas diam est, venenatis vitae dui in, vestibulum mollis arcu. Donec eu nibh tincidunt, dapibus sem eu, aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
-
-                <p>aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
-
-              <ul class="footer__links">
-                <li><a href="#">List One</a></li>
-                <li><a href="#">Page Two</a></li>
-                <li><a href="#">Design</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact Me</a></li>
-              </ul>
-            </div>
+                <p>
+                  Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.</p>
         </footer>
 
         <script src="js/menu.js"></script>
