--- a/programas1.html
+++ b/programas1.html
@@ -8,7 +8,6 @@
         <meta name="author" content="Daniel">
         <meta name="description" content="descrição bacanuda">
         <meta name="keywords" content="html5, tecnologia">
-        <link rel="stylesheet" href="main.css"/>
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <!-- Fonts -->
@@ -20,6 +19,8 @@
 
     </head>
     <body class="no-js">
+
+
 
         <header class="header">
           <a href="index.html" class="logo-text">HUB</a>
@@ -35,53 +36,111 @@
               <li><a href="desing.html">DESING</a></li>
               <li><a href="contato.html">CONTATO</a></li>
             </ul>
+
           </nav>
+          <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PROGRAMAS</h1>
         </header >
 
 
+        <style>
+   h1 {
+        font-size: 2rem;
+        padding: 10px 20px; /* Adiciona espaçamento interno */
+        background-color: rgb(57, 100, 150); /* Cor de fundo azul */
+        color: #fff; /* Cor do texto branco */
+        border-radius: 1px; /* Borda arredondada */
+        width: 400px; /* Define a largura baseada no conteúdo */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+          .container2 {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              height: 100vh; /* Define a altura da tela inteira */
 
-        <section class="hero">
-          <img src="img/b2.png" alt="Carousel Img">
-          <h1 class="hero__title">
-               SOLUÇÕES DIGITAIS  <abbr title="Wordpress"></abbr>
-          </h1>
+
+          }
+
+          .hero1 {
+              display: flex;
+              flex-wrap: wrap; /* Permite que os elementos quebrem para a próxima linha */
+              justify-content: center;
+              align-items: center;
+              gap: 30px; /* Espaço entre os elementos */
+          }
+
+          .box-container {
+              background-color: rgb(200, 200, 200); /* Cor de fundo cinza */
+              padding: 10px; /* Espaçamento interno */
+              border-radius: 10px; /* Arredonda as bordas */
+              box-shadow: 0 9px 6px rgba(0, 0, 0, 0.2); /* Adiciona sombra preta */
+              transition: background-color 0.6s; /* Adiciona transição suave */
+          }
+
+          .box {
+              margin: 0;
+              cursor: pointer; /* Muda o cursor para indicar que é clicável */
+              text-decoration: none; /* Remove o sublinhado padrão */
+              color: black; /* Altera a cor do texto para preto */
+          }
+
+          .box-container:hover {
+              background-color: rgb(57, 100, 150); /* Muda a cor de fundo para azul ao passar o mouse */
+          }
+      </style>
+
+
+      <div class="container2">
+
+          <section class="hero1">
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="fastfood">FAST-FOOD</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="fastfood">FAST-FOOD</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
+              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
+          </section>
+      </div>
+
+
+
+
+
+
+
+
+        <div class="wrapper">
+          <section class="module parallax parallax-1">
+
+           </section>
+
+           <section class="module content">
+               <div class="container">
+
+
+               </div>
+           </section>
+
+
+
+
+
 
 
 
 
       </section>
 
-
-      <div class="wrapper">
-        <section class="module parallax parallax-1">
-
-         </section>
-
-         <section class="module content">
-             <div class="container">
-
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum cum dicta qui! Eius qui autem illo? Culpa omnis eveniet doloremque, voluptas quod, sit, consequuntur accusantium quam debitis totam corporis.</p>
-             </div>
-         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!---->
         <div class="container">
             <section class="people-cards">
             <article class="people-cards__card">
 
-             <!---- <img src="img/c01.jpg" alt="Carousel Img" class="people-cards__image"> -->
+
 
                 <div class="people-cards__avatar">
                   <!-- <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
@@ -135,15 +194,15 @@
         </section>
         </div>
 
-        <section class="content">
+        <section class="content"><hr>
+
         <div class="container">
 
 
           <article>
             <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
             <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
-            <a href="#" class="button button-primary">BUTTON</a>
-            <a href="#" class="button button-secundary">BUTTON</a>
+
           </article>
 
           <article>
@@ -161,16 +220,24 @@
                     <h2>Latest Articles</h2>
                 </div>
             </div>
+    <!--
+
+
+          </div>    -->
+
+
+
+
+
 
 
         </section>
 
         <div class="laptop-slider">
           <div class="slideshow">
-            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
-            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
+
+            <figure><img alt="" src="" /></figure>
+
             <span class="prev" style="display: none;"><i class="fas fa-angle-left fa-4x"></i></span>
             <span class="next" style="display: none;"><i class="fas fa-angle-right fa-4x"></i></span>
           </div>
@@ -180,7 +247,7 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>Nam kkkkkkkkkkkkkkkkkkkkkkkkk, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
               <figcaption>
                 Nam mi enim, auctor non ultricies.
               </figcaption>
@@ -213,7 +280,13 @@
                 <h2 class="footer__logo"></h2>
 
                 <p>
+
                   Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.</p>
+
+
+
+
+            </div>
         </footer>
 
         <script src="js/menu.js"></script>
@@ -221,9 +294,16 @@
 
         <script src="js/main.js"></script>
 
+
         <a id="iconeFixo" href="caminho/do/arquivo.html">
           <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
         </a>
+
+
+
+
+
+        </div>
 
     </body>
 </html>
