--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Daniel">
         <meta name="description" content="descrição bacanuda">
         <meta name="keywords" content="html5, tecnologia">
+        <link rel="stylesheet" href="main.css"/>
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <!-- Fonts -->
@@ -19,8 +20,6 @@
 
     </head>
     <body class="no-js">
-
-
 
         <header class="header">
           <a href="index.html" class="logo-text">HUB</a>
@@ -48,37 +47,41 @@
           </h1>
 
 
-        </section>
-
-
-        <div class="wrapper">
-          <section class="module parallax parallax-1">
-
-           </section>
-
-           <section class="module content">
-               <div class="container">
-
-
-               </div>
-           </section>
-
-
-
-
-
-
-
 
 
       </section>
+
+
+      <div class="wrapper">
+        <section class="module parallax parallax-1">
+
+         </section>
+
+         <section class="module content">
+             <div class="container">
+
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum cum dicta qui! Eius qui autem illo? Culpa omnis eveniet doloremque, voluptas quod, sit, consequuntur accusantium quam debitis totam corporis.</p>
+             </div>
+         </section>
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!---->
         <div class="container">
             <section class="people-cards">
             <article class="people-cards__card">
 
-
+             <!---- <img src="img/c01.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
                   <!-- <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
@@ -132,15 +135,15 @@
         </section>
         </div>
 
-        <section class="content"><hr>
-
+        <section class="content">
         <div class="container">
 
 
           <article>
             <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
             <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
-
+            <a href="#" class="button button-primary">BUTTON</a>
+            <a href="#" class="button button-secundary">BUTTON</a>
           </article>
 
           <article>
@@ -158,24 +161,16 @@
                     <h2>Latest Articles</h2>
                 </div>
             </div>
-    <!--
-
-
-          </div>    -->
-
-
-
-
-
 
 
         </section>
 
         <div class="laptop-slider">
           <div class="slideshow">
-
-            <figure><img alt="" src="" /></figure>
-
+            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
+            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
+            <figure><img alt="" src="img/slider/slide-01.png" /></figure>
+            <figure><img alt="" src="img/slider/slide-02.png" /></figure>
             <span class="prev" style="display: none;"><i class="fas fa-angle-left fa-4x"></i></span>
             <span class="next" style="display: none;"><i class="fas fa-angle-right fa-4x"></i></span>
           </div>
@@ -185,7 +180,7 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam kkkkkkkkkkkkkkkkkkkkkkkkk, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
               <figcaption>
                 Nam mi enim, auctor non ultricies.
               </figcaption>
@@ -226,16 +221,9 @@
 
         <script src="js/main.js"></script>
 
-
         <a id="iconeFixo" href="caminho/do/arquivo.html">
           <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
         </a>
-
-
-
-
-
-        </div>
 
     </body>
 </html>
