--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
         <script src="js/main.js"></script>
 
 
-        <a id="iconeFixo" href="caminho/do/arquivo.html">
+        <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: -10px; margin-left: -10px;">
           <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
-        </a>
+      </a>
+
 
 
 
