--- a/programas1.html
+++ b/programas1.html
@@ -95,7 +95,7 @@
       <div class="container2">
 
           <section class="hero1">
-              <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="fastfood">FAST-FOOD</a></div>
+              <div class="box-container"><a href="produto1.html" class="box" id="fastfood">FAST-FOOD</a></div>
               <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
               <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
               <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="clinicas">CLINICAS</a></div>
