--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
           <nav class="header__nav">
             <ul>
-              <li><a href="loja.html">LOJA VIRTUAL</a></li>
-              <li><a href="web.html">WEB SITE</a></li>
+              <li><a href="programas1.html">PROGRAMAS</a></li>
+              <li><a href="index1.html">WEB SITE</a></li>
               <li><a href="automacao.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
               <li><a href="desing.html">DESING</a></li>
-              <li><a href="contato.html">CONTATO</a></li>
+              <li><a href="contato1.html">CONTATO</a></li>
             </ul>
           </nav>
         </header >
