--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <ul>
               <li><a href="programas1.html">PROGRAMAS</a></li>
               <li><a href="index1.html">WEB SITE</a></li>
-              <li><a href="automacao.html">AUTOMAÇÃO</a></li>
+              <li><a href="programas1.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
-              <li><a href="desing.html">DESING</a></li>
+              <li><a href="marketing.html">DESING</a></li>
               <li><a href="contato1.html">CONTATO</a></li>
             </ul>
           </nav>
