--- a/programas1.html
+++ b/programas1.html
@@ -36,7 +36,7 @@
               <li><a href="desing.html">DESING</a></li>
               <li><a href="contato.html">CONTATO</a></li>
             </ul>
-
+            <div style="border-top: 1px solid transparent;"></div>
           </nav>
           <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PROGRAMAS</h1>
         </header >
