--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
 
                 <p>
                   Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.</p>
+
+                </div>
         </footer>
 
         <script src="js/menu.js"></script>
