--- a/index.html
+++ b/index.html
@@ -132,16 +132,12 @@
         </section>
         </div>
 
-        <section class="content"><hr>
+        <section class="content">
+        <hr>
 
         <div class="container">
 
 
-          <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
-
-          </article>
 
           <article>
             <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
@@ -211,6 +207,9 @@
           <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
           <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
           <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
+          <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: 25px; margin-left: -20px;">
+            <img src="redes/lampada.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+        </a>
        </section>
 
         <footer class="footer">
@@ -221,7 +220,7 @@
                   Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.</p>
 
                 </div>
-        </footer>
+         </footer>
 
         <script src="js/menu.js"></script>
         <script src="js/carousel.js"></script>
@@ -229,9 +228,7 @@
         <script src="js/main.js"></script>
 
 
-        <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: 25px; margin-left: -20px;">
-          <img src="redes/chatbot(2).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
-      </a>
+
 
 
 
