--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 
         <div class="container">
 
-
+          <section class="my-section">
+            <div class="container">
 
           <article>
             <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
@@ -149,6 +150,11 @@
           </article>
           </div>
         </section>
+
+
+                   </div>
+                  </section>
+
 
 
         <section class="last-articles">
@@ -218,7 +224,7 @@
                 <h2 class="footer__logo"></h2>
 
 
-                <section class="my-section">
+
 
                   <section class="my-section">
                     <div class="container">
