--- a/index.html
+++ b/index.html
@@ -67,13 +67,6 @@
            </section>
 
 
-
-
-
-
-
-
-
       </section>
 
         <!---->
@@ -138,15 +131,20 @@
         <section class="content">
         <hr>
 
-        <div class="container">
 
-          <section class="my-section">
-            <div class="container">
+
+          <section class="my-section2">
+            <div class="container2">
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, felis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum viverra. Sed et molestie libero. Sed ut ultrices dui.</p>
+            <h3>Lorem ipsggum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin seggggd molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
+            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, fggggelis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum vivergggra. Sed et molestie libero. Sed ut ultrices dui.</p>
+
+
+
+
+
           </article>
           </div>
         </section>
@@ -167,11 +165,6 @@
 
 
           </div>    -->
-
-
-
-
-
 
 
         </section>
