--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </h1>
 
           <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: 25px; margin-left: -20px;">
-            <img src="redes/lampada.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+            <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing"title="CHATBOT">
         </a>
 
         </section>
