--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
 
 
 
+        </section>
+
+
         <section class="hero">
           <img src="img/b2.png" alt="Carousel Img">
           <h1 class="hero__title">
                SOLUÇÕES DIGITAIS  <abbr title="Wordpress"></abbr>
           </h1>
+
 
           <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: 25px; margin-left: -20px;">
             <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing"title="CHATBOT">
@@ -219,13 +223,25 @@
 
 
 
+
+
+
+
+
                   <section class="my-section">
                     <div class="container">
                       <p>
+
                         Fundada em 2017 como <a href="https://bridgetrade.biz/pt_br/">Bridge Trade</a>, nossa empresa tinha a missão de aproximar as pequenas empresas do comércio internacional. Desde então, evoluímos e expandimos nossas operações, e hoje atuamos também no mercado nacional como HUB Soluções Digitais. A HUB é reconhecida por oferecer uma ampla gama de serviços relacionados ao e-commerce e criação de software, atendendo às necessidades do mercado digital com excelência.
                       </p>
                     </div>
                   </section>
+
+
+
+
+
+
 
 
 
@@ -242,12 +258,12 @@
 
 
 
-
-
-
-
-
-        </div>
-
     </body>
+
+
+
+
+
+
+
 </html>
